# ros2_nav_perception_car

./: .gitignore  Gazebo_闭环仿真搭建计划.md  LICENSE  Navigation_Launch_Tree_Architecture.md  README.md  ROS2_DiffDrive_Deployment.ipynb  SLAM_Launch_Tree_Architecture.md  overview.ipynb
Knowledge/: EKF_Five_Equations.md  Knowledge_Primer.md  Map_Loading_Architecture.md  SLAM_Launch_Tree_Architecture.md
debug_log/: 2026_3_9-.md
sensor_introduction/: IMU.md  lidar.md
src/driver/controller/config/: ekf.yaml
src/navigation/: setup.py
src/navigation/launch/: navigation.launch.py  navigation_sim.launch.py  sim_nav_full.launch.py  sim_slam_nav.launch.py
src/navigation/launch/include/: bringup.launch.py  navigation_base.launch.py
src/scripts/: sim_nav.sh
src/simulations/rosorin_description/: package.xml  setup.py
src/simulations/rosorin_description/launch/: gazebo.launch.py  gazebo_gz.launch.py
src/simulations/rosorin_description/rosorin_description/: odom_to_tf_node.py  scan_frame_fix_node.py
src/simulations/rosorin_description/urdf/: rosorin.gazebo.xacro  rosorin.gz.xacro
src/simulations/rosorin_description/worlds/: empty.world  map_test.world  map_test_gz.sdf  sim_empty.world  sim_empty_gz.sdf
src/slam/launch/: slam.launch.py
src/slam/maps/: map_test.pgm  map_test.yaml
src/xf_mic_asr_offline/: CMakeLists.txt
